# seb

./: CMakeLists.txt  README.md  start-qemu.sh
src/: main.cpp
src/efi-cpp/: console.cpp  console.hpp  efi.hpp
